# eventyay-stripe

./: pyproject.toml
eventyay_stripe/: apps.py  forms.py  models.py  payment.py  signals.py  tasks.py  urls.py  views.py
eventyay_stripe/management/commands/: stripe_connect_fill_countries.py
eventyay_stripe/migrations/: 0001_initial.py
eventyay_stripe/templates/plugins/stripe/: presale_head.html
