[project]
name = "eventyay-stripe"
dynamic = ["version"]
description = "Integrates eventyay-stripe with eventyay"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "eventyay team", email = "support@eventyay.com"},
]
maintainers = [
    {name = "eventyay team", email = "support@eventyay.com"},
]

dependencies = [
    'stripe==11.3.*',
]

[project.entry-points."pretix.plugin"]
eventyay_stripe = "eventyay_stripe:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/pretix/pretix-venueless"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "eventyay_stripe.__version__"}

[tool.setuptools.packages.find]
include = ["eventyay*"]
namespaces = false
